@@ -6,6 +6,10 @@
 
                                   Changelog
 
+Yang Tse (7 May 2009)
+- Fixed an issue affecting FTP transfers, introduced with the transfer.c
+  patch committed May 4.
+
 Daniel Stenberg (7 May 2009)
 - Man page *roff problems fixed thanks to input from Colin Watson. Problems
   reported in the Debian package.
